<resources>
    <string name="app_name">ImplementacionJson</string>
    <string name="Titulo">Implementacion de json</string>
    <string name="tnombre">Ingrese nombre</string>
    <string name="tedad">Ingrese su Edad</string>
    <string name="tsexo">Ingrese su sexo</string>
    <string name="tjson">JSon</string>
    <string name="rjeson">Resultado Json</string>
    <string name="bjson">Convierte a Json</string>
    <string name="bclase">Convierte Clase</string>
</resources>
